@@ -684,7 +684,7 @@ public class Table extends WidgetGroup {
 		return align;
 	}
 
-	/** Returns the row index for the y coordinate, or -1 if there are no cells.
+	/** Returns the row index for the y coordinate, or -1 if not over a row.
 	 * @param y The y coordinate, where 0 is the top of the table. */
 	public int getRow (float y) {
 		Array<Cell> cells = this.cells;
@@ -692,13 +692,12 @@ public class Table extends WidgetGroup {
 		y += getPadTop();
 		int i = 0, n = cells.size;
 		if (n == 0) return -1;
-		if (n == 1) return 0;
 		while (i < n) {
 			Cell c = cells.get(i++);
-			if (c.actorY + c.computedPadTop < y) break;
+			if (c.actorY + c.computedPadTop < y) return row;
 			if (c.endRow) row++;
 		}
-		return Math.min(row, rows - 1);
+		return -1;
 	}
 
 	public void setSkin (Skin skin) {
