@@ -1,5 +1,6 @@
 [1.9.11]
 - Update to LWJGL 3.2.3
+- API Change: Table#getRow now returns -1 when over the table but not over a row (used to return the last row).
 
 [1.9.10]
 - API Addition: Allow target display for maximization LWJGL3 backend
